Fix focus outline visibility on the Accordion expander button

--- a/client/src/components/Accordions.scss
+++ b/client/src/components/Accordions.scss
@@ -39,5 +39,5 @@
 }
 .pull-down-accordion-expander:focus,
 .pull-down-accordion-expander:active {
-  border: 1px solid rgba(37,114,180,0.5);
+  border: 1.5px solid $backgroundColor;
 }
